force-app/main/default/objects/KimbleOne__StatusSummary__c/KimbleOne__StatusSummary__c.object-meta.xml
<CustomObject>
    <label>Status Summary</label>
    <nameField>
        <label>Status Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>