force-app/main/default/objects/KimbleOne__StatusSummary__c/fields/KimbleOne__DeliveryPortfolio__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryPortfolio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Portfolio</label>
    <referenceTo>KimbleOne__DeliveryPortfolio__c</referenceTo>
    <relationshipLabel>Status Summaries</relationshipLabel>
    <relationshipName>StatusSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>