force-app/main/default/objects/KimbleOne__StatusSummary__c/fields/KimbleOne__TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Period</label>
    <referenceTo>KimbleOne__TimePeriod__c</referenceTo>
    <relationshipLabel>Status Summaries</relationshipLabel>
    <relationshipName>StatusSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>